@@ -143,50 +143,6 @@ static const libspectrum_qword redblueMask = 0x00FF00FF;
 static const libspectrum_qword greenMask = 0x0000FF00;
 
 static const libspectrum_dword dotmatrix[16] = {
-GetResult1(DWORD A, DWORD B, DWORD C, DWORD D, DWORD E)
-{
-  int x = 0;
-  int y = 0;
-  int r = 0;
-
-  if (A == C)
-    x += 1;
-  else if (B == C)
-    y += 1;
-  if (A == D)
-    x += 1;
-  else if (B == D)
-    y += 1;
-  if (x <= 1)
-    r += 1;
-  if (y <= 1)
-    r -= 1;
-  return r;
-}
-
-static inline int 
-GetResult2(DWORD A, DWORD B, DWORD C, DWORD D, DWORD E)
-{
-  int x = 0;
-  int y = 0;
-  int r = 0;
-
-  if (A == C)
-    x += 1;
-  else if (B == C)
-    y += 1;
-  if (A == D)
-    x += 1;
-  else if (B == D)
-    y += 1;
-  if (x <= 1)
-    r -= 1;
-  if (y <= 1)
-    r += 1;
-  return r;
-}
-
-static inline int 
   0x00003F00, 0x003F0000, 0x0000003F, 0x00000000,
   0x003F3F3F, 0x00000000, 0x003F3F3F, 0x00000000,
   0x0000003F, 0x00000000, 0x00003F00, 0x003F0000,
@@ -203,23 +159,22 @@ static inline int
 GetResult( libspectrum_dword A, libspectrum_dword B, libspectrum_dword C,
 	   libspectrum_dword D )
 {
-  int x = 0;
-  int y = 0;
-  int r = 0;
-
-  if (A == C)
-    x += 1;
-  else if (B == C)
-    y += 1;
-  if (A == D)
-    x += 1;
-  else if (B == D)
-    y += 1;
-  if (x <= 1)
-    r += 1;
-  if (y <= 1)
-    r -= 1;
-  return r;
+  const int ac = (A==C);
+  const int bc = (B==C);
+  const int x1 = ac;
+  const int y1 = (bc & !ac);
+  const int ad = (A==D);
+  const int bd = (B==D);
+  const int x2 = ad;
+  const int y2 = (bd & !ad);
+  const int x = x1+x2;
+  const int y = y1+y2;
+  static const int rmap[3][3] = {
+      {0, 0, -1},
+      {0, 0, -1},
+      {1, 1,  0}
+    };
+  return rmap[y][x];
 }
 
 static inline libspectrum_dword 
@@ -251,7 +206,8 @@ FUNCTION( scaler_Super2xSaI )( const libspectrum_byte *srcPtr,
 			       libspectrum_dword dstPitch,
 			       int width, int height )
 {
-  scaler_data_type *bP, *dP;
+  const scaler_data_type *bP;
+  scaler_data_type *dP;
 
   {
     const libspectrum_dword nextlineSrc = srcPitch / sizeof( scaler_data_type );
@@ -259,7 +215,7 @@ FUNCTION( scaler_Super2xSaI )( const libspectrum_byte *srcPtr,
     size_t i;
 
     while (height--) {
-      bP = (scaler_data_type*)srcPtr;
+      bP = (const scaler_data_type*)srcPtr;
       dP = (scaler_data_type*)dstPtr;
 
       for( i = 0; i < width; ++i ) {
@@ -368,7 +324,8 @@ FUNCTION( scaler_SuperEagle )( const libspectrum_byte *srcPtr,
 			       libspectrum_dword dstPitch,
 			       int width, int height )
 {
-  scaler_data_type *bP, *dP;
+  const scaler_data_type *bP;
+  scaler_data_type *dP;
 
   {
     size_t i;
@@ -376,7 +333,7 @@ FUNCTION( scaler_SuperEagle )( const libspectrum_byte *srcPtr,
     libspectrum_dword nextDstLine = dstPitch / sizeof( scaler_data_type );
 
     while (height--) {
-      bP = (scaler_data_type*)srcPtr;
+      bP = (const scaler_data_type*)srcPtr;
       dP = (scaler_data_type*)dstPtr;
       for( i = 0; i < width; ++i ) {
 	libspectrum_dword color4, color5, color6;
@@ -496,7 +453,8 @@ FUNCTION( scaler_2xSaI )( const libspectrum_byte *srcPtr,
 			  libspectrum_dword dstPitch,
 			  int width, int height )
 {
-  scaler_data_type *bP, *dP;
+  const scaler_data_type *bP;
+  scaler_data_type *dP;
 
   {
     libspectrum_dword nextlineSrc = srcPitch / sizeof( scaler_data_type );
@@ -504,7 +462,7 @@ FUNCTION( scaler_2xSaI )( const libspectrum_byte *srcPtr,
 
     while (height--) {
       size_t i;
-      bP = (scaler_data_type*)srcPtr;
+      bP = (const scaler_data_type*)srcPtr;
       dP = (scaler_data_type*)dstPtr;
 
       for( i = 0; i < width; ++i ) {
@@ -642,7 +600,7 @@ FUNCTION( scaler_AdvMame2x )( const libspectrum_byte *srcPtr,
 			      int width, int height )
 {
   unsigned int nextlineSrc = srcPitch / sizeof( scaler_data_type );
-  scaler_data_type *p = (scaler_data_type*) srcPtr;
+  const scaler_data_type *p = (const scaler_data_type*) srcPtr;
 
   unsigned int nextlineDst = dstPitch / sizeof( scaler_data_type );
   scaler_data_type *q = (scaler_data_type*) dstPtr;
@@ -686,7 +644,7 @@ FUNCTION( scaler_AdvMame3x )( const libspectrum_byte *srcPtr,
 			      int width, int height )
 {
   unsigned int nextlineSrc = srcPitch / sizeof( scaler_data_type );
-  scaler_data_type *p = (scaler_data_type*) srcPtr;
+  const scaler_data_type *p = (const scaler_data_type*) srcPtr;
 
   unsigned int nextlineDst = dstPitch / sizeof( scaler_data_type );
   scaler_data_type *q = (scaler_data_type*) dstPtr;
@@ -798,11 +756,12 @@ FUNCTION( scaler_Normal2x )( const libspectrum_byte *srcPtr,
 			     libspectrum_dword dstPitch,
 			     int width, int height )
 {
-  scaler_data_type i, *s, *d, *d2;
+  const scaler_data_type *s;
+  scaler_data_type i, *d, *d2;
 
   while( height-- ) {
 
-    for( i = 0, s = (scaler_data_type*)srcPtr,
+    for( i = 0, s = (const scaler_data_type*)srcPtr,
 	   d = (scaler_data_type*)dstPtr,
 	   d2 = (scaler_data_type*)(dstPtr + dstPitch);
 	 i < width;
@@ -830,7 +789,7 @@ FUNCTION( scaler_Normal3x )( const libspectrum_byte *srcPtr,
     int i;
     r = dstPtr;
     for (i = 0; i < width; ++i, r += 3 * SCALER_DATA_SIZE ) {
-      scaler_data_type color = *(((scaler_data_type*) srcPtr) + i);
+      scaler_data_type color = *(((const scaler_data_type*) srcPtr) + i);
 
       *(scaler_data_type*)( r +                    0             ) = color;
       *(scaler_data_type*)( r +     SCALER_DATA_SIZE             ) = color;
@@ -892,7 +851,7 @@ FUNCTION( scaler_TV2x )( const libspectrum_byte *srcPtr,
 {
   int i, j;
   unsigned int nextlineSrc = srcPitch / sizeof( scaler_data_type );
-  scaler_data_type *p = (scaler_data_type*)srcPtr;
+  const scaler_data_type *p = (const scaler_data_type*)srcPtr;
 
   unsigned int nextlineDst = dstPitch / sizeof( scaler_data_type );
   scaler_data_type *q = (scaler_data_type*)dstPtr;
@@ -924,7 +883,7 @@ FUNCTION( scaler_TimexTV )( const libspectrum_byte *srcPtr,
 {
   int i, j;
   unsigned int nextlineSrc = srcPitch / sizeof( scaler_data_type );
-  scaler_data_type *p = (scaler_data_type *)srcPtr;
+  const scaler_data_type *p = (const scaler_data_type *)srcPtr;
 
   unsigned int nextlineDst = dstPitch / sizeof( scaler_data_type );
   scaler_data_type *q = (scaler_data_type *)dstPtr;
@@ -960,7 +919,7 @@ FUNCTION( scaler_DotMatrix )( const libspectrum_byte *srcPtr,
 {
   int i, j, ii, jj;
   unsigned int nextlineSrc = srcPitch / sizeof( scaler_data_type );
-  scaler_data_type *p = (scaler_data_type *)srcPtr;
+  const scaler_data_type *p = (const scaler_data_type *)srcPtr;
 
   unsigned int nextlineDst = dstPitch / sizeof( scaler_data_type );
   scaler_data_type *q = (scaler_data_type *)dstPtr;
