@@ -1199,3 +1199,4 @@
 20050113 ui/scaler/{scaler.[ch],scaler_internals.h,scalers.c},
          ui/sdl/sdldisplay.c: Undo accidental commit (Fred).
 20050113 menu_data.c: add TS2068 to change ROMs menu.
+20050114 ui/scaler/scalers.c: Undo accidental commit again (Fred).
